--- a/sass/1-base/_base-dir.sass
+++ b/sass/1-base/_base-dir.sass
@@ -30,6 +30,10 @@ button
    border-radius: 50px
    background-color: $NeonGreen
 
+   p
+      @include hide-text
+      position: absolute
+
    &:hover
       box-shadow: 0 0 40px 0 #53ffaa
 
